--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <script defer src="bundle.js"></script>
 </head>
 <body>
-    <h1>What day is it?</h1>
-    <h2>Today are <span id="day">?</span></h2>
+    <h1>What day is it ba?</h1>
+    <h2>Ngayon is <span id="day">?</span></h2>
 
-    <img src="cat.jpg" width="500" alt="pug">
+    <img src="cat.jpg" width="500" alt="cat">
 </body>
 </html>
